--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,6 @@
 #Other
 *.psd
 /Addons/BW2035_Uniform/Tropen/Test Stuff/
-/Addons/Backpack/ArmA Stuff/
+/Addons/EUFOR_Backpack/ArmA Stuff/
 /cmake-build-debug/
 CMakeLists.txt
